--- a/apps/website/src/pages/[...blog]/[tag]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[tag]/[...page].astro
@@ -1,11 +1,11 @@
 ---
-import { PageLayout } from '@astro-nx-depla/shared/ui';
+import { app } from '@astro-nx-depla/website/app';
 import {
+  PageLayout,
   Headline,
-  PostsList as BlogList,
+  PostsList,
   Pagination,
 } from '@astro-nx-depla/shared/ui';
-import { app } from '@astro-nx-depla/website/app';
 
 export const getStaticPaths = app.post.getPostTagListStaticPaths;
 
@@ -17,7 +17,7 @@ const meta = app.post.getPostTagMetaByPage(page, tag);
 <PageLayout meta={meta}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-3xl">
     <Headline>Tag: {tag}</Headline>
-    <BlogList posts={page.data} />
+    <PostsList posts={page.data} />
     <Pagination prevUrl={page.url.prev} nextUrl={page.url.next} />
   </section>
 </PageLayout>
