--- a/apps/website/src/pages/landing/saas.astro
+++ b/apps/website/src/pages/landing/saas.astro
@@ -1,7 +1,13 @@
 ---
 import { PageLayout as Layout } from '@astro-nx-depla/shared/ui';
 
-import { Header, Hero2, Steps2, Content, CallToAction  } from '@astro-nx-depla/shared/ui';
+import {
+  Header,
+  Hero2,
+  Steps2,
+  Content,
+  CallToAction,
+} from '@astro-nx-depla/shared/ui';
 
 import { headerData } from '~/data/navigation';
 
@@ -16,12 +22,12 @@ const meta = {
       {...headerData}
       actions={[
         {
-          type: "ghost",
+          type: 'ghost',
           text: 'Login',
           href: '#',
         },
         {
-          type: "primary",
+          type: 'primary',
           text: 'Sign Up',
           href: '#',
         },
@@ -33,22 +39,32 @@ const meta = {
   <!-- Hero2 Widget ******************* -->
 
   <Hero2
-    callToAction={{ text: 'Get template', href: 'https://github.com/onwidget/astrowind', icon: 'tabler:download' }}
+    callToAction={{
+      text: 'Get template',
+      href: 'https://github.com/onwidget/astrowind',
+      icon: 'tabler:download',
+    }}
     callToAction2={{ text: 'Learn more', href: '#features' }}
-    image={{ src: import('~/assets/images/hero.png'), alt: 'AstroWind Hero Image' }}
+    image={{
+      src: import('~/assets/images/hero.png'),
+      alt: 'AstroWind Hero Image',
+    }}
   >
     <Fragment slot="title">
       Free template for <br />
-      <span class="text-accent dark:text-white highlight"> Astro 2.0</span> + Tailwind CSS
+      <span class="text-accent dark:text-white highlight"> Astro 2.0</span> + Tailwind
+      CSS
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 2.0 +
-        Tailwind CSS.</span
+        <span class="font-semibold">AstroWind</span> is a free, customizable and
+        production-ready template for Astro 2.0 + Tailwind CSS.</span
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span> Suitable for Startups,
-      Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs.
+      <span class="block mb-1 sm:hidden font-bold text-blue-600"
+        >AstroWind: Production-ready.</span
+      > Suitable for Startups, Small Business, Sass Websites, Professional Portfolios,
+      Marketing Websites, Landing Pages & Blogs.
     </Fragment>
   </Hero2>
 
@@ -79,9 +95,13 @@ const meta = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Ad vix debet docendi</h3>
-      Ne dicta praesent ocurreret has, diam theophrastus at pro. Eos etiam regione ut, persius eripuit quo id. Sit te euismod
-      tacimates.
+      <h3
+        class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2"
+      >
+        Ad vix debet docendi
+      </h3>
+      Ne dicta praesent ocurreret has, diam theophrastus at pro. Eos etiam regione
+      ut, persius eripuit quo id. Sit te euismod tacimates.
     </Fragment>
   </Content>
 
@@ -111,9 +131,13 @@ const meta = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Ad vix debet docendi</h3>
-      Ne dicta praesent ocurreret has, diam theophrastus at pro. Eos etiam regione ut, persius eripuit quo id. Sit te euismod
-      tacimates.
+      <h3
+        class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2"
+      >
+        Ad vix debet docendi
+      </h3>
+      Ne dicta praesent ocurreret has, diam theophrastus at pro. Eos etiam regione
+      ut, persius eripuit quo id. Sit te euismod tacimates.
     </Fragment>
   </Content>
 
@@ -144,9 +168,13 @@ const meta = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Ad vix debet docendi</h3>
-      Ne dicta praesent ocurreret has, diam theophrastus at pro. Eos etiam regione ut, persius eripuit quo id. Sit te euismod
-      tacimates.
+      <h3
+        class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2"
+      >
+        Ad vix debet docendi
+      </h3>
+      Ne dicta praesent ocurreret has, diam theophrastus at pro. Eos etiam regione
+      ut, persius eripuit quo id. Sit te euismod tacimates.
     </Fragment>
   </Content>
 
@@ -189,12 +217,15 @@ const meta = {
     }}
   >
     <Fragment slot="title">
-      Astro + <br class="block sm:hidden" /><span class="sm:whitespace-nowrap"> Tailwind CSS</span>
+      Astro + <br class="block sm:hidden" /><span class="sm:whitespace-nowrap">
+        Tailwind CSS</span
+      >
     </Fragment>
 
     <Fragment slot="subtitle">
-      Be very surprised by these huge fake numbers you are seeing on this page. <br class="hidden md:inline" />Don't
-      waste more time! :P
+      Be very surprised by these huge fake numbers you are seeing on this page. <br
+        class="hidden md:inline"
+      />Don't waste more time! :P
     </Fragment>
   </CallToAction>
 </Layout>
