--- a/libs/shared/ui/src/lib/Card.astro
+++ b/libs/shared/ui/src/lib/Card.astro
@@ -9,7 +9,7 @@ const { href, title, body } = Astro.props;
 ---
 
 <li class="link-card">
-  <a href={href}>
+  <a {href}>
     <h2>
       {title}
       <span>&rarr;</span>
