--- a/apps/website/src/pages/[...blog]/[category]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[category]/[...page].astro
@@ -13,7 +13,7 @@ const { page, category } = Astro.props;
 const meta = app.post.getPostCategoryMetaByPage(page, category);
 ---
 
-<PageLayout meta={meta}>
+<PageLayout {meta}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-3xl">
     <Headline>
       <span class="capitalize">{category.replaceAll('-', ' ')}</span>
