--- a/apps/website/src/pages/[...blog]/[tag]/[...page].astro
+++ b/apps/website/src/pages/[...blog]/[tag]/[...page].astro
@@ -14,7 +14,7 @@ const { page, tag } = Astro.props;
 const meta = app.post.getPostTagMetaByPage(page, tag);
 ---
 
-<PageLayout meta={meta}>
+<PageLayout {meta}>
   <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-3xl">
     <Headline>Tag: {tag}</Headline>
     <PostsList posts={page.data} />
