--- a/apps/website/src/pages/[...blog]/index.astro
+++ b/apps/website/src/pages/[...blog]/index.astro
@@ -1,10 +1,6 @@
 ---
 import { app } from '@astro-nx-depla/website/app';
-import {
-  PageLayout,
-  SinglePost,
-  ToBlogLink
-} from '@astro-nx-depla/shared/ui';
+import { PageLayout, SinglePost, ToBlogLink } from '@astro-nx-depla/shared/ui';
 
 export const getStaticPaths = app.post.getPostViewStaticPaths;
 
