--- a/libs/shared/ui/src/lib/CallToAction.astro
+++ b/libs/shared/ui/src/lib/CallToAction.astro
@@ -34,7 +34,14 @@ const {
             />
           )
         }
-        {subtitle && <p class="text-xl text-muted dark:text-slate-400" set:html={subtitle} />}
+        {
+          subtitle && (
+            <p
+              class="text-xl text-muted dark:text-slate-400"
+              set:html={subtitle}
+            />
+          )
+        }
         {
           typeof callToAction === 'string' ? (
             <Fragment set:html={callToAction} />
@@ -43,8 +50,18 @@ const {
             callToAction.text &&
             callToAction.href && (
               <div class="mt-6 max-w-xs mx-auto">
-                <a class="btn btn-primary w-full sm:w-auto" href={callToAction.href} target="_blank" rel="noopener">
-                  {callToAction.icon && <Icon name={callToAction.icon} class="w-5 h-5 mr-1 -ml-1.5" />}
+                <a
+                  class="btn btn-primary w-full sm:w-auto"
+                  href={callToAction.href}
+                  target="_blank"
+                  rel="noopener"
+                >
+                  {callToAction.icon && (
+                    <Icon
+                      name={callToAction.icon}
+                      class="w-5 h-5 mr-1 -ml-1.5"
+                    />
+                  )}
                   {callToAction.text}
                 </a>
               </div>
