--- a/libs/shared/ui/src/lib/Content.astro
+++ b/libs/shared/ui/src/lib/Content.astro
@@ -31,7 +31,12 @@ const {
 } = Astro.props;
 ---
 
-<section class:list={[{ 'pt-0 md:pt-0': isAfterContent }, 'bg-blue-50 dark:bg-slate-800 py-16 md:py-20']}>
+<section
+  class:list={[
+    { 'pt-0 md:pt-0': isAfterContent },
+    'bg-blue-50 dark:bg-slate-800 py-16 md:py-20',
+  ]}
+>
   <div class="max-w-xl sm:mx-auto lg:max-w-2xl">
     {
       (title || subtitle || highlight) && (
@@ -50,7 +55,10 @@ const {
           )}
 
           {subtitle && (
-            <p class="max-w-3xl mx-auto sm:text-center text-xl text-muted dark:text-slate-400" set:html={subtitle} />
+            <p
+              class="max-w-3xl mx-auto sm:text-center text-xl text-muted dark:text-slate-400"
+              set:html={subtitle}
+            />
           )}
         </div>
       )
@@ -59,7 +67,11 @@ const {
   <div class="mx-auto max-w-7xl p-4 md:px-8">
     <div class={`md:flex ${isReversed ? 'md:flex-row-reverse' : ''} md:gap-16`}>
       <div class="md:basis-1/2 self-center">
-        {content && <div class="mb-12 text-lg dark:text-slate-400" set:html={content} />}
+        {
+          content && (
+            <div class="mb-12 text-lg dark:text-slate-400" set:html={content} />
+          )
+        }
 
         {
           items && (
@@ -68,12 +80,24 @@ const {
                 <div class="flex">
                   <div class="flex-shrink-0">
                     <div class="flex h-7 w-7 items-center justify-center rounded-full bg-primary text-gray-50">
-                      <Icon name={icon ? icon : 'tabler:check'} class="w-5 h-5" />
+                      <Icon
+                        name={icon ? icon : 'tabler:check'}
+                        class="w-5 h-5"
+                      />
                     </div>
                   </div>
                   <div class="ml-4">
-                    {title2 && <h3 class="text-lg font-medium leading-6 dark:text-white">{title2}</h3>}
-                    {description && <p class="mt-2 text-muted dark:text-slate-400" set:html={description} />}
+                    {title2 && (
+                      <h3 class="text-lg font-medium leading-6 dark:text-white">
+                        {title2}
+                      </h3>
+                    )}
+                    {description && (
+                      <p
+                        class="mt-2 text-muted dark:text-slate-400"
+                        set:html={description}
+                      />
+                    )}
                   </div>
                 </div>
               ))}
