--- a/libs/shared/ui/src/lib/Footer.astro
+++ b/libs/shared/ui/src/lib/Footer.astro
@@ -28,12 +28,21 @@ const {
   links = [],
   footNote = '',
   theme = 'light',
-  siteName = ''
+  siteName = '',
 } = Astro.props;
 ---
 
-<footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800']}>
-  <div class="dark:bg-dark absolute inset-0 pointer-events-none" aria-hidden="true"></div>
+<footer
+  class:list={[
+    { dark: theme === 'dark' },
+    'relative border-t border-gray-200 dark:border-slate-800',
+  ]}
+>
+  <div
+    class="dark:bg-dark absolute inset-0 pointer-events-none"
+    aria-hidden="true"
+  >
+  </div>
   <div class="relative max-w-7xl mx-auto px-4 sm:px-6 dark:text-slate-300">
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
@@ -103,4 +112,3 @@ const {
     </div>
   </div>
 </footer>
-
