--- a/libs/shared/ui/src/lib/Header.astro
+++ b/libs/shared/ui/src/lib/Header.astro
@@ -45,9 +45,13 @@ const {
   ]}
   id="header"
 >
-  <div class="py-3 px-3 md:py-3.5 md:px-4 mx-auto w-full md:flex md:justify-between max-w-7xl">
-    <div class:list={[{"mr-auto": position === "right"}, "flex justify-between"]}>
-      <a class="flex items-center" href={'/'} >
+  <div
+    class="py-3 px-3 md:py-3.5 md:px-4 mx-auto w-full md:flex md:justify-between max-w-7xl"
+  >
+    <div
+      class:list={[{ 'mr-auto': position === 'right' }, 'flex justify-between']}
+    >
+      <a class="flex items-center" href={'/'}>
         <Logo />
       </a>
       <div class="flex items-center md:hidden">
@@ -59,14 +63,20 @@ const {
       class="items-center w-full md:w-auto hidden md:flex dark:text-slate-200 h-[calc(100vh-72px)] md:h-auto overflow-y-auto md:overflow-visible md:mx-5"
       aria-label="Main navigation"
     >
-      <ul class="flex flex-col pt-8 md:pt-0 md:flex-row md:self-center w-full md:w-auto text-xl md:text-base">
+      <ul
+        class="flex flex-col pt-8 md:pt-0 md:flex-row md:self-center w-full md:w-auto text-xl md:text-base"
+      >
         {
           links.map(({ text, href, links }) => (
             <li class={links?.length ? 'dropdown' : ''}>
               {links?.length ? (
                 <>
                   <button class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out">
-                    {text} <Icon name="tabler:chevron-down" class="w-3.5 h-3.5 ml-0.5 hidden md:inline" />
+                    {text}{' '}
+                    <Icon
+                      name="tabler:chevron-down"
+                      class="w-3.5 h-3.5 ml-0.5 hidden md:inline"
+                    />
                   </button>
                   <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-dark rounded md:absolute pl-4 md:pl-0 md:hidden font-medium md:bg-white/90 md:min-w-[200px] drop-shadow-xl">
                     {links.map(({ text: text2, href: href2 }) => (
@@ -94,7 +104,12 @@ const {
         }
       </ul>
     </nav>
-    <div class:list={[{ 'ml-auto': position === 'left' }, 'md:self-center flex items-center md:mb-0']}>
+    <div
+      class:list={[
+        { 'ml-auto': position === 'left' },
+        'md:self-center flex items-center md:mb-0',
+      ]}
+    >
       <div class="hidden items-center md:flex">
         {showToggleTheme && <ToggleTheme iconClass="w-5 h-5" />}
 
@@ -116,7 +131,10 @@ const {
                 <a
                   class:list={[
                     'btn ml-2 py-2.5 px-5.5 md:px-6 font-semibold shadow-none text-sm',
-                    { 'btn-ghost': type === 'ghost', 'btn-primary': type === 'primary' },
+                    {
+                      'btn-ghost': type === 'ghost',
+                      'btn-primary': type === 'primary',
+                    },
                   ]}
                   href={href}
                 >
