--- a/libs/shared/ui/src/lib/Hero.astro
+++ b/libs/shared/ui/src/lib/Hero.astro
@@ -41,18 +41,35 @@ const {
           )
         }
         <div class="max-w-3xl mx-auto">
-          {subtitle && <p class="text-xl text-muted mb-6 dark:text-slate-300" set:html={subtitle} />}
-          <div class="max-w-xs sm:max-w-md m-auto flex flex-nowrap flex-col sm:flex-row sm:justify-center gap-4">
+          {
+            subtitle && (
+              <p
+                class="text-xl text-muted mb-6 dark:text-slate-300"
+                set:html={subtitle}
+              />
+            )
+          }
+          <div
+            class="max-w-xs sm:max-w-md m-auto flex flex-nowrap flex-col sm:flex-row sm:justify-center gap-4"
+          >
             {
               callToAction && (
                 <div class="flex w-full sm:w-auto">
                   {typeof callToAction === 'string' ? (
                     <Fragment set:html={callToAction} />
                   ) : (
-                    <a class="btn btn-primary sm:mb-0 w-full" href={callToAction?.href} target="_blank" rel="noopener">
+                    <a
+                      class="btn btn-primary sm:mb-0 w-full"
+                      href={callToAction?.href}
+                      target="_blank"
+                      rel="noopener"
+                    >
                       {callToAction?.icon && (
                         <>
-                          <Icon name={callToAction.icon} class="w-5 h-5 mr-1 -ml-1.5" />{' '}
+                          <Icon
+                            name={callToAction.icon}
+                            class="w-5 h-5 mr-1 -ml-1.5"
+                          />{' '}
                         </>
                       )}
                       {callToAction?.text}
@@ -70,7 +87,10 @@ const {
                     <a class="btn w-full" href={callToAction2?.href}>
                       {callToAction2?.icon && (
                         <>
-                          <Icon name={callToAction2.icon} class="w-5 h-5 mr-1 -ml-1.5" />{' '}
+                          <Icon
+                            name={callToAction2.icon}
+                            class="w-5 h-5 mr-1 -ml-1.5"
+                          />{' '}
                         </>
                       )}
                       {callToAction2.text}
