--- a/libs/shared/ui/src/lib/LatestPosts.astro
+++ b/libs/shared/ui/src/lib/LatestPosts.astro
@@ -54,5 +54,5 @@ const posts = await app.post.findLatestPosts({ count });
     }
   </div>
 
-  <Grid posts={posts} />
+  <Grid {posts} />
 </section>
