--- a/libs/shared/ui/src/lib/Steps2.astro
+++ b/libs/shared/ui/src/lib/Steps2.astro
@@ -78,8 +78,22 @@ const {
                   />
                 )
               }
-              {title && <h2 class="mb-4 text-3xl lg:text-4xl font-bold font-heading" set:html={title} />}
-              {subtitle && <p class="mb-8 text-xl text-muted dark:text-slate-400" set:html={subtitle} />}
+              {
+                title && (
+                  <h2
+                    class="mb-4 text-3xl lg:text-4xl font-bold font-heading"
+                    set:html={title}
+                  />
+                )
+              }
+              {
+                subtitle && (
+                  <p
+                    class="mb-8 text-xl text-muted dark:text-slate-400"
+                    set:html={subtitle}
+                  />
+                )
+              }
 
               <div class="w-full">
                 {
@@ -89,8 +103,18 @@ const {
                     callToAction &&
                     callToAction.text &&
                     callToAction.href && (
-                      <a class="btn btn-primary mb-4 sm:mb-0" href={callToAction.href} target="_blank" rel="noopener">
-                        {callToAction.icon && <Icon name={callToAction.icon} class="w-5 h-5 mr-1 -ml-1.5" />}
+                      <a
+                        class="btn btn-primary mb-4 sm:mb-0"
+                        href={callToAction.href}
+                        target="_blank"
+                        rel="noopener"
+                      >
+                        {callToAction.icon && (
+                          <Icon
+                            name={callToAction.icon}
+                            class="w-5 h-5 mr-1 -ml-1.5"
+                          />
+                        )}
                         {callToAction.text}
                       </a>
                     )
@@ -107,12 +131,22 @@ const {
                       <li class="flex md:-mx-4">
                         <div class="pr-4 sm:pl-4">
                           <span class="flex w-16 h-16 mx-auto items-center justify-center text-2xl font-bold rounded-full bg-blue-100 text-primary">
-                            {icon ? <Icon name={icon} class="w-6 h-6 icon-bold" /> : index + 1}
+                            {icon ? (
+                              <Icon name={icon} class="w-6 h-6 icon-bold" />
+                            ) : (
+                              index + 1
+                            )}
                           </span>
                         </div>
                         <div class="pl-4">
-                          <h3 class="mb-4 text-xl font-semibold font-heading" set:html={title2} />
-                          <p class="text-muted dark:text-gray-400" set:html={description} />
+                          <h3
+                            class="mb-4 text-xl font-semibold font-heading"
+                            set:html={title2}
+                          />
+                          <p
+                            class="text-muted dark:text-gray-400"
+                            set:html={description}
+                          />
                         </div>
                       </li>
                     ))
