--- a/libs/shared/ui/src/lib/Tags.astro
+++ b/libs/shared/ui/src/lib/Tags.astro
@@ -2,7 +2,7 @@
 import { app } from '@astro-nx-depla/website/app';
 import { IPost } from '@astro-nx-depla/website/entities/post';
 
-const TAG = app.post.config.taxonomies.tag
+const TAG = app.post.config.taxonomies.tag;
 
 export interface Props {
   tags: IPost['tags'];
