--- a/libs/shared/ui/src/lib/ToggleTheme.astro
+++ b/libs/shared/ui/src/lib/ToggleTheme.astro
@@ -17,6 +17,11 @@ const {
 } = Astro.props;
 ---
 
-<button type="button" class={className} aria-label={label} data-aw-toggle-color-scheme>
+<button
+  type="button"
+  class={className}
+  aria-label={label}
+  data-aw-toggle-color-scheme
+>
   <Icon name={iconName} class={iconClass} />
 </button>
