--- a/libs/shared/ui/src/lib/layouts/BaseLayout.astro
+++ b/libs/shared/ui/src/lib/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ export interface Props {
 }
 
 const { meta = {} } = Astro.props;
-const { language = 'en', textDirection = 'ltr' } = app.config
+const { language = 'en', textDirection = 'ltr' } = app.config;
 ---
 
 <!DOCTYPE html>
@@ -20,7 +20,9 @@ const { language = 'en', textDirection = 'ltr' } = app.config
     <MetaTags {...meta} />
   </head>
 
-  <body class="antialiased text-page bg-light dark:text-slate-300 tracking-tight dark:bg-dark">
+  <body
+    class="antialiased text-page bg-light dark:text-slate-300 tracking-tight dark:bg-dark"
+  >
     <slot />
     <BasicScripts />
     <style is:global>
