move website data to separate lib

--- a/apps/website/src/pages/landing/saas.astro
+++ b/apps/website/src/pages/landing/saas.astro
@@ -9,7 +9,7 @@ import {
   CallToAction,
 } from '@astro-nx-depla/shared/ui';
 
-import { headerData } from '~/data/navigation';
+import { headerData } from '@astro-nx-depla/website/data';
 
 const meta = {
   title: 'Saas Landing Page',
