--- a/apps/website/src/pages/landing/startup.astro
+++ b/apps/website/src/pages/landing/startup.astro
@@ -3,7 +3,7 @@ import { PageLayout as Layout } from '@astro-nx-depla/shared/ui';
 
 import { Header, Hero, CallToAction } from '@astro-nx-depla/shared/ui';
 
-import { headerData } from '~/data/navigation';
+import { headerData } from '@astro-nx-depla/website/data';
 
 const meta = {
   title: 'Startup Landing Page',
