--- a/libs/shared/ui/src/lib/layouts/PageLayout.astro
+++ b/libs/shared/ui/src/lib/layouts/PageLayout.astro
@@ -3,7 +3,7 @@ import Layout from './BaseLayout.astro';
 import { Footer, Header, Announcement } from '@astro-nx-depla/shared/ui';
 import { app } from '@astro-nx-depla/website/app';
 
-import { headerData, footerData } from '~/data/navigation';
+import { headerData, footerData } from '@astro-nx-depla/website/data';
 
 import { MetaSEO } from '@astro-nx-depla/shared/types/html';
 
