--- a/libs/shared/ui/src/lib/layouts/BaseLayout.astro
+++ b/libs/shared/ui/src/lib/layouts/BaseLayout.astro
@@ -4,10 +4,10 @@ import { MetaTags } from '@astro-nx-depla/shared/ui';
 import BasicScripts from '../js/BasicScripts.astro';
 
 import { app } from '@astro-nx-depla/website/app';
-import { MetaSEO } from '@astro-nx-depla/shared/types/html';
+import { IMetaSEO } from '@astro-nx-depla/shared/types/html';
 
 export interface Props {
-  meta?: MetaSEO;
+  meta?: IMetaSEO;
 }
 
 const { meta = {} } = Astro.props;
