--- a/libs/shared/ui/src/lib/layouts/PageLayout.astro
+++ b/libs/shared/ui/src/lib/layouts/PageLayout.astro
@@ -5,10 +5,10 @@ import { app } from '@astro-nx-depla/website/app';
 
 import { headerData, footerData } from '@astro-nx-depla/website/data';
 
-import { MetaSEO } from '@astro-nx-depla/shared/types/html';
+import { IMetaSEO } from '@astro-nx-depla/shared/types/html';
 
 export interface Props {
-  meta?: MetaSEO;
+  meta?: IMetaSEO;
   showToggleTheme?: boolean;
 }
 
