--- a/apps/website/src/pages/index.astro
+++ b/apps/website/src/pages/index.astro
@@ -33,7 +33,7 @@ const meta = {
     image={{ src: import('~/assets/images/hero.png'), alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden lg:inline">create your website <br class="2xl:hidden"/> with</span>
+      Cool template for <span class="hidden lg:inline">create your website <br class="2xl:hidden"/> with</span>
       <span class="text-accent dark:text-white highlight"> Astro 2.0</span> + Tailwind CSS
     </Fragment>
 
