--- a/apps/website/src/pages/index.astro
+++ b/apps/website/src/pages/index.astro
@@ -28,33 +28,25 @@ const meta = {
 
   <Hero
     callToAction={{
-      text: 'Get template',
+      text: 'Get Started',
       href: 'https://github.com/onwidget/astrowind',
-      icon: 'tabler:download',
     }}
     callToAction2={{ text: 'Learn more', href: '#features' }}
     image={{
       src: import('~/assets/images/hero.png'),
-      alt: 'AstroWind Hero Image',
+      alt: 'CloudShip Hero Image',
     }}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden lg:inline"
-        >create your website <br class="2xl:hidden" /> with</span
-      >
-      <span class="text-accent highlight"> Astro 2.0</span> + Tailwind
-      CSS
+      Sail Smoothly with
+      <span class="text-accent highlight"> CloudShip</span>
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and
-        production-ready template for Astro 2.0 + Tailwind CSS.</span
+        Cloud-based software shipping platform for any language, any size
+        project.</span
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600"
-        >AstroWind: Production-ready.</span
-      > Suitable for Startups, Small Business, Sass Websites, Professional Portfolios,
-      Marketing Websites, Landing Pages & Blogs.
     </Fragment>
   </Hero>
 
@@ -66,7 +58,7 @@ const meta = {
 
   <Features
     highlight="Features"
-    title="What you get with AstroWind"
+    title="What you get with CloudShip"
     subtitle="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque rem aperiam, eaque ipsa quae."
     items={[
       [
@@ -184,7 +176,7 @@ const meta = {
   <!-- Steps Widget ****************** -->
 
   <Steps
-    title="Get your dream website up and running in no time with AstroWind."
+    title="Get your dream website up and running in no time with CloudShip."
     items={[
       {
         title: 'Step 1: <span class="font-medium">Download</span>',
@@ -283,7 +275,7 @@ const meta = {
 
   <LatestPosts
     title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
+    information={`The blog is used to display CloudShip documentation.
 			Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
 			Astro is a very interesting technology. Thanks.
 		`}
